<resources>
    <string name="app_name">Easy Doctor 24</string>

    <string name="register">Register as</string>
    <string name="patient">Patient</string>
    <string name="doc">Doctor</string>
    <string name="with_us">With us now</string>

    <string name="hintName">Enter your name</string>
    <string name="hintPhoneNum">Enter your phone number</string>

    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="myAppts">My Appts</string>
    <string name="upcomingAppt"> Up coming</string>
    <string name="search">Search</string>

    <string name="categoryHeader">More than 500 doctors attend for your service</string>

    <string name="filterDialogTitle">Filter for fees</string>
    <string name="filterLow">Low</string>
    <string name="filterMedium">Medium</string>
    <string name="filterHigh">High</string>
    <string name="filterSave">Save</string>
    <string name="doctorDetails">Doctor Profile</string>
    <string name="doctorTiming">Timing</string>
    <string name="doctorFees">Fee</string>
    <string name="doctorMedicalPractise">Medical Practise</string>
    <string name="doctorSpecialization">Specialization</string>
    <string name="doctorProfileAllComments">All Comments</string>
    <string name="doctorProfileMakeAppointment">Make an appointment</string>
    <string name="appointmentChooseTime">Choose your date and time</string>
    <string name="appointmentPickDate">Pick date</string>
    <string name="appointmentPickTime">Pick time</string>
</resources>
