<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"

    android:paddingBottom="60dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_background"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_close_filter"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:layout_gravity="end"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_action_close"
        android:layout_width="60dp"
        android:layout_height="60dp" />

    <TextView

        android:textSize="22sp"
        android:textColor="@color/colorAppGray"
        android:gravity="center_horizontal"
        android:text="@string/filterDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:text="@string/filterLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/filterMedium"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/filterHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <SeekBar
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:progressDrawable="@drawable/shape_filter_style"
        android:id="@+id/sb_filter_bar"
        android:thumb="@drawable/shape_filter_thumb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/dollar"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:gravity="center_vertical"
            android:textColor="@color/colorAppGreen"
            android:layout_marginLeft="20dp"
            android:id="@+id/tv_filter_fees"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_filter_save"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/filterSave"
        android:background="@drawable/shape_left_right_arch"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_width="80dp"
        android:layout_height="40dp" />

</LinearLayout>