<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/colorAppGray"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/appointmentChooseTime"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:background="@drawable/shape_left_right_arch"
        android:text="@string/appointmentPickDate"
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAppBlack"
        android:textSize="16sp"
        android:gravity="center"
        android:text="06-09-2019"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:background="@drawable/shape_left_right_arch"
        android:text="@string/appointmentPickTime"
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAppBlack"
        android:textSize="16sp"
        android:gravity="center"
        android:text="5.00 pm - 5.30 pm"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>