<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

    <ImageView
        android:id="@+id/ig_reg_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/doc_logo" />

    <LinearLayout
        android:id="@+id/reg_button_holder"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_reg_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textColor="@color/colorDefaultText"
            android:textSize="16sp" />

        <TextView
            android:onClick="patientClicked"
            android:id="@+id/tv_patient"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_button"
            android:gravity="center"
            android:text="@string/patient"
            android:textStyle="bold"
            android:textColor="@color/colorRegisterButtonText"
            android:textSize="18sp" />

        <TextView
            android:onClick="doctorOnclick"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_button"
            android:gravity="center"
            android:text="@string/doc"
            android:textStyle="bold"
            android:textColor="@color/colorRegisterButtonText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/with_us"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorDefaultText"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_reg_count_doc"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:text="1234k"
                android:textColor="#000000"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginRight="10dp"
                android:textColor="@color/colorRegisterButtonText"
                android:gravity="center"
                android:background="@drawable/shape_circle"
                android:text="@string/doc"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <TextView
                android:textColor="@color/colorRegisterButtonText"
                android:gravity="center"
                android:background="@drawable/shape_circle"
                android:text="@string/patient"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <TextView
                android:id="@+id/tv_reg_count_patient"
                android:layout_width="wrap_content"
                android:text="1234k"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>