<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context=".activities.DoctorProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_doctor_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kathrine Alexa"
                android:textColor="@color/colorAppBlack"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_doctor_profile_designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Neurologist"
                android:textColor="@color/colorAppBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_doctor_profile_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10+ Years of Experience"
                android:textColor="@color/colorAppBlack"
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3"
                android:stepSize="0.5" />

        </LinearLayout>


        <android.support.v7.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_vertical"
            android:innerRadius="0dp"
            app:cardCornerRadius="12dp">
            <ImageView
                android:id="@+id/iv_doctor_profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/doc_demo"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/clock" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctorTiming"
                android:textColor="@color/colorAppGreen"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_doctor_profile_timing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.30PM - 8.30PM"
                android:textColor="@color/colorAppGreen"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:src="@drawable/dollar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctorFees"
                android:textColor="@color/colorAppGreen"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_doctor_profile_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="500/Session"
                android:textColor="@color/colorAppGreen"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/doctorMedicalPractise"
        android:textAllCaps="true"
        android:textColor="@color/colorAppGreen"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/doctor_profile_hospital_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Florida State Hospital"
        android:textColor="@color/colorAppBlack"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_doctor_profile_hospital_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Florida , US"
        android:textColor="@color/colorAppBlack"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/doctorSpecialization"
        android:textAllCaps="true"
        android:textColor="@color/colorAppGreen"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tv_doctor_profile_specialization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Neurology"
        android:textColor="@color/colorAppBlack"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/doctorProfileAllComments"
            android:textAllCaps="true"
            android:textColor="@color/colorAppGreen"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_doctor_profile_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="(33)"
            android:textColor="@color/colorAppGreen"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_doctor_profile_comments"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_action_right_arrow" />
    </LinearLayout>

    <TextView
        android:onClick="makeApptClicked"
        android:id="@+id/tv_doctor_profile_make_appt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_left_right_arch"
        android:gravity="center"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:text="@string/doctorProfileMakeAppointment"
        android:textColor="@android:color/white"
        android:textSize="16sp" />


</LinearLayout>